added the kcb intergration
